# cologen

./: Cargo.toml  README.md
example/: example.sh  output  scheme.yaml  template
src/: color.rs  main.rs  replace.rs  scheme.rs
