[package]
name = "cologen"
version = "0.1.0"
authors = ["piutranq"]
edition = "2018"
repository = "https://github.com/piutranq/cologen"
description = "The simple color scheme configuration generator, inspired by base16-builder"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopt = "0.4.3"
serde = { version = "1.0.105", features = ["derive"] }
serde_yaml = "0.8.11"
regex = "1.3.6"
